--- a/templates/gcsp/gcsp_header.html
+++ b/templates/gcsp/gcsp_header.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
     <header class="mb-4">
-        <h1> <a href="{{ url_for('srihome') }}" class="text-decoration-none text-dark"></a>Secure Retirement Index (SRI)</h1>
+        <h1> <a href="{{ url_for('srihome') }}" class="text-decoration-none text-dark">Secure Retirement Index (SRI)</a></h1>
         <p class="text-muted">
             This application applies a questionnaire form to determine an appropriate percentage of 
             fixed income (e.g., Single Premium Immediate Annuity).
